# disk-space-rs

./: Cargo.toml  README.md
.github/: SECURITY.md
src/: lib.rs  test.rs
