[package]
name = "disk-space"
version = "0.1.0"
edition = "2024"

description = "Tiny lib for disk space info of os file system (cross-platform)."
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["filesystem"]
keywords = ["filesystem", "utility"]
repository = "https://github.com/nabbisen/disk-space-rs"
readme = "README.md"
rust-version = "1.90.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to reasonably improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
# strip = "debuginfo" # reduce size
incremental = true

[dependencies]
libc = { version = "0.2.183", default-features = false }
